--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "react": "^18",
+    "react-ace": "^11.0.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
